--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+ 
 :root {
-    --bg-color: white;
+    /* this is just to test tailwind theme config */
+    --bg-color: theme('colors.brand-blue');
     --alt-bg-color: theme('colors.blue.500');
     --accent-color: blue-500;
     --text-color-main: gray-900;
