--- a/src/components/TextEditor/index.css
+++ b/src/components/TextEditor/index.css
@@ -1,3 +1,13 @@
 .ck-editor__editable_inline {
-    min-height: 100px;
+    min-height: 200px;
+}
+
+.ck-content h2 {
+    font-size: 1.5rem;
+} 
+.ck-content h3 {
+    font-size: 1.17rem;
+}
+.ck-content h4 {
+    font-size: 1rem;
 }
