--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,35 @@ h1 {
   font-weight: 600;
   text-align: center;
 }
+#logout-label{
+  position: absolute;
+  top: 10px;
+  left:220px;
+  width: 40px;
+  height: 35px;
+  background: red;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  border-radius: 6px; 
+}
+#logout-label span{
+  background-color: red;
+  width: 40px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  transform: translateX(-8px);
+  
+}
+#logout-label span:hover{
+  background-color: red;
+}
+#logout-label div:nth-child(2){
+  background-color: red;
+  display: none;
+  
+}
+
