--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ h1 {
   font-weight: 600;
   text-align: center;
 }
-#logout-label{
+#Logout-label{
   position: absolute;
   top: 10px;
   left:220px;
@@ -50,7 +50,7 @@ h1 {
   margin: 0;
   border-radius: 6px; 
 }
-#logout-label span{
+#Logout-label span{
   background-color: red;
   width: 40px;
   padding: 10px;
@@ -59,12 +59,11 @@ h1 {
   transform: translateX(-8px);
   
 }
-#logout-label span:hover{
+#Logout-label span:hover{
   background-color: red;
 }
-#logout-label div:nth-child(2){
+#Logout-label div:nth-child(2){
   background-color: red;
   display: none;
   
 }
-
